removed border-radius from PDF fixed padding issues in the PDF causing it to overflow onto the next page

--- a/src/pdf.less
+++ b/src/pdf.less
@@ -1,5 +1,5 @@
 #resume {
-    padding: 30px 35px 0px 40px;
+    padding: 20px 35px 0px 40px;
 
     h1 {
         font-family: Lato Bold;
@@ -7,5 +7,9 @@
 
     a {
         text-decoration: none;
+    }
+
+    .timeline-icon, .event {
+        border-radius: 0px !important;
     }
 }
